<resources>
    <string name="app_name">Taxi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="register_text">Para comenzar, necesitamos tus datos para tomar tu registro.</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="phone_number">Telefono</string>
    <string name="email">Correo electronico</string>
    <string name="title_activity_navigation_client">NavigationClientActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="permission_requiere">Error: Permission Location Required</string>
    <string name="drivers_not_found">No encontramos conductores</string>
    <string name="not_found_key">No se enecontro conductor con key </string>
    <string name="welcome">Buenos dias</string>
    <string name="choose_a_saved_place">Elegir tu lugar favorito</string>
    <string name="where_to">A donde te dirijes ?</string>
    <string name="city_name_empty">El nombre de la ciudad esta vacio</string>
    <string name="title_activity_request_driver">RequestDriverActivity</string>
    <string name="pay_by_cash">Pago con efectivo</string>
    <string name="confirm_uber">Confirmar metodo de pago</string>
    <string name="confirm_pickup_spot">Confirma tu ubicación</string>
    <string name="address_demo">Av. Independencia #45 San Simon Tlatlahuquitepec</string>
    <string name="confirm_taxi">confirmar viaje</string>
    <string name="meet_driver_here">recojer en este punto al cliente?</string>
    <string name="finding_your_ride">Estamos buscando al conductor mas cercano, porfavor espere...</string>
    <string name="token_not_found">Token no encontrado</string>
    <string name="request_driver_failed">Fallo al enviar la peticion al conductor</string>
    <string name="no_driver_accept_request">No logramos conectar tu viaje con algun conductor</string>
    <string name="trip_not_found">No se encontro informacion del viaje: </string>
    <string name="uber_x">Nombre del auto</string>
    <string name="car_number_example">123456</string>
    <string name="driver_name_example">Luciano Mora</string>
    <string name="ascii_dot">■</string>
    <string name="lenguaje_example">Español</string>
    <!-- Strings used for fragments for navigation -->

    <!-- TODO: Remove or change this placeholder text -->

    android:hint="@string/default_text"
</resources>
